hphp/hack/test/extended_reasons/assign_obj_get.php.debug.exp
error: Typing[4110] Invalid argument

Expected `Sub`

 12 | function foo(»Sub« $_): void {}
 13 | 
 14 | function bar(SuperBox $f): void {

File "assign_obj_get.php", line 12, character 14 - line 12, character 16:

But got `Super`

 6 |   public function __construct(private Super $item) {}
 7 |   public function get(): »Super« {
 8 |     return $this->item;
 9 |   }

File "assign_obj_get.php", line 7, character 26 - line 7, character 30:

Flow:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rflow":[
            {
              "Rflow":[
                {
                  "Rflow":[
                    {
                      "Rhint":[{"filename":"assign_obj_get.php","line":7,"char_start":26,"char_end":30}]
                    },
                    {
                      "Rwitness":[{"filename":"assign_obj_get.php","line":15,"char_start":8,"char_end":16}]
                    }
                  ]
                },
                {
                  "Rwitness":[{"filename":"assign_obj_get.php","line":15,"char_start":3,"char_end":4}]
                }
              ]
            },
            {
              "Rwitness":[{"filename":"assign_obj_get.php","line":16,"char_start":7,"char_end":8}]
            }
          ]
        },
        {
          "Rprj_symm":[
            {"Prj_symm_fn_arg":[0,0,{"Contravariant":[]}]},
            {
              "Rflow":[
                {
                  "Rwitness":[{"filename":"assign_obj_get.php","line":16,"char_start":3,"char_end":5}]
                },
                {
                  "Rwitness_from_decl":[{"filename":"assign_obj_get.php","line":12,"char_start":10,"char_end":12}]
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "Rhint":[{"filename":"assign_obj_get.php","line":12,"char_start":14,"char_end":16}]
    }
  ]
}


File "", line 0, character 0 - line 0, character -1:

1 error found.
